@@ -20,6 +20,17 @@ input ..
 glrad options
 ]
 input ..
+.br
+.B objview.rb
+[
+.B \-l
+][
+.B "\-r roomsiz"
+][
+.B "\-n nprocs"
+]
+input ..
+.br
 .SH DESCRIPTION
 .I Objview
 renders a RADIANCE object interactively using
@@ -41,7 +52,21 @@ option to
 .PP
 Any number of material and scene files may be given,
 but no in-line commands or standard input.
-.SH AUTHOR
-Greg Ward Larson
+.PP
+There is also a Ruby version of objview (objview.rb)
+available, primarily for Windows compatibility, but 
+the Ruby version also adds a luminaire viewer option.
+.PP 
+If the user specifies the -l option, then a Radiance 
+luminaire description is the input to the program. 
+objview.rb will place the centroid of the luminiare at 0,0,0
+and surround the distribution with a room that is 4' square
+(in meters), with a view along the positive y. Scale the
+room size with the -r option.
+.PP
+The number of processors to use may be specified with the 
+-n option.
+.SH AUTHOR(s)
+Greg Ward Larson, Rob Guglielmetti
 .SH "SEE ALSO"
 glrad(1), oconv(1), rad(1), rvu(1)
