@@ -90,11 +90,13 @@ if(WIN32)
   install(PROGRAMS genklemsamp.pl DESTINATION bin)
   install(PROGRAMS genskyvec.pl DESTINATION bin)
   install(FILES tregsamp.dat DESTINATION bin)
+  install(PROGRAMS objview.rb DESTINATION bin)
 else()
   install(PROGRAMS genBSDF.pl DESTINATION bin RENAME genBSDF)
   install(PROGRAMS genklemsamp.pl DESTINATION bin RENAME genklemsamp)
   install(PROGRAMS genskyvec.pl DESTINATION bin RENAME genskyvec)
   install(PROGRAMS objview.csh DESTINATION bin RENAME objview)
+  install(PROGRAMS objview.rb DESTINATION bin)
   install(PROGRAMS objpict.csh DESTINATION bin RENAME objpict)
   install(PROGRAMS glare.csh DESTINATION bin RENAME glare)
   install(PROGRAMS dayfact.csh DESTINATION bin RENAME dayfact)
