@@ -1837,3 +1837,5 @@ Added -d option to genskyvec to produce direct-only (sun no sky) vector.
 
 Added Ashikhmin-Shirley anisotropic BRDF model (ashik2) with help
 from Nicolas Boneel.
+
+Added Ruby rewrite of objview.csh by Rob Guglielmetti.
